clang/test/BSC/Positive/Driver/rewrite-bsc/rewrite_bsc_with_header/rewrite_bsc_header.hbs
#ifndef REWRITE_H
#define REWRITE_H

struct Foo {
  int a;
};

int struct Foo::getA(struct Foo* this);

void int::increase(int *this);

#endif
