clang/test/BSC/Negative/Driver/rewrite-bsc/GenericBSCMethod/rewrite_generic_bscmethod.hbs
#ifndef REWRITE_H
#define REWRITE_H
struct MyStruct<T> {
  T res;
};


int struct MyStruct<T>::foo() {
  int x = 1;
  return x;
}

#endif